// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondPage component should render correctly With default props 1`] = `
<div
  className="page"
>
  <ul>
    <li>
      <Link
        replace={true}
        to="/1"
      >
        1
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/3"
      >
        3
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/not-found"
      >
        4
      </Link>
    </li>
  </ul>
</div>
`;

exports[`SecondPage component should render correctly With text prop 1`] = `
<div
  className="page"
>
  text
  <ul>
    <li>
      <Link
        replace={true}
        to="/1"
      >
        1
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/3"
      >
        3
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/not-found"
      >
        4
      </Link>
    </li>
  </ul>
</div>
`;
